<resources>
    <string name="app_name">WordGarden</string>
    <string name="uid_msg_fail_check">내부 데이터 읽기에 실패했습니다.</string>
    <string name="token_fail_to_send">알람을 위한 토큰이 정상처리되지 않았습니다.</string>
    <string name="bottom_word">단어</string>
    <string name="bottom_quiz">퀴즈</string>
    <string name="bottom_mypage">마이페이지</string>
    <string name="bottom_home">홈</string>
    <string name="bottom_garden">정원</string>
    <string name="login_google">구글로 계속하기</string>
    <string name="login_naver">네이버로 계속하기</string>
    <string name="login_kakao">카카오로 계속하기</string>
    <string name="login_id">아이디로 로그인하기</string>
    <string name="login_start">가장 편한 방법으로 시작하세요!</string>
    <string name="login_msg_fail_check">회원 정보 조회에 실패했습니다.</string>
    <string name="login_msg_fail_auto_login">자동 로그인에 실패했습니다.</string>
    <string name="login_msg_result_null">회원 정보가 없습니다.</string>
    <string name="login_msg_not_user">회원 가입이 필요합니다.</string>
    <string name="login_msg_can_not_delete_uid">회원 정보 초기화 작업을 실패했습니다.</string>
    <string name="login_msg_can_not_save_uid">회원 정보 저장에 실패했습니다.</string>
    <string name="login_msg_can_not_update_token">토큰 업데이트에 실패했습니다.</string>
    <string name="onboarding_input_nickname1">저는 닉네임을</string>
    <string name="onboarding_input_nickname2">시작할래요!</string>
    <string name="onboarding_next">시작하기</string>
    <string name="onboarding_msg_fill">닉네임을 입력해주세요.</string>
    <string name="onboarding_msg_for_tester">테스터용 닉네임을 입력해주세요.</string>
    <string name="onboarding_msg_fail_signup">회원 가입에 실패했습니다.</string>
    <string name="onboarding_msg_fail_update_image">회원 데이터 처리에 실패했습니다.</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_point_title">포인트</string>
    <string name="mypage_rank_title">등수</string>
    <string name="mypage_weekly_score">이번 주 퀴즈 성적</string>
    <string name="mypage_weekly_score_title">이번주 틀린 단어</string>
    <string name="mypage_weekly_score_text1">문제 중</string>
    <string name="mypage_weekly_score_text2">문제 정답</string>
    <string name="mypage_my_solved_quiz">내가 푼 퀴즈 확인</string>
    <string name="mypage_my_solved_quiz_title">풀었던 퀴즈</string>
    <string name="mypage_my_taken_quiz">내가 받은 퀴즈 확인</string>
    <string name="mypage_my_taken_quiz_title">받은 퀴즈</string>
    <string name="mypage_friend">친구 관리</string>
    <string name="mypage_quick_start">바로가기</string>
    <string name="mypage_msg_fail_load_my_info">내 정보 불러오기에 실패했습니다.</string>
    <string name="mypage_msg_fail_update_image">프로필 사진 업데이트를 실패했습니다.</string>
    <string name="mypage_friend_title">친구 관리</string>
    <string name="mypage_friend_my_code">나의 친구 코드 복사하기</string>
    <string name="mypage_friend_enter_code">친구 코드를 입력하세요.</string>
    <string name="mypage_friend_add">친구 추가</string>
    <string name="mypage_friends_no_friends">아직 친구가 없어요.</string>
    <string name="mypage_friend_report_title">신고하기</string>
    <string name="mypage_friend_report_reason1">영리 목적/홍보성</string>
    <string name="mypage_friend_report_reason2">저작권 침해</string>
    <string name="mypage_friend_report_reason3">음란성/선정성</string>
    <string name="mypage_friend_report_reason4">욕설/인신공격</string>
    <string name="mypage_friend_report_reason5">개인정보노출</string>
    <string name="mypage_friend_report_reason6">기타</string>
    <string name="mypage_friends_msg_fail_load_friends">친구 목록 불러오기에 실패했습니다.</string>
    <string name="mypage_friends_msg_fail_add_friend">친구 추가에 실패했습니다.</string>
    <string name="mypage_friends_msg_fail_delete_friend">친구 삭제에 실패했습니다.</string>
    <string name="mypage_friends_msg_fail_report_friend">친구 신고에 실패했습니다.</string>
    <string name="mypage_friends_msg_delete_friend">친구를 삭제하시겠습니까?</string>
    <string name="mypage_friends_msg_report_friend">친구를 신고하시겠습니까?</string>
    <string name="mypage_friends_msg_report_fill">신고 사유를 입력해주세요.</string>
    <string name="mypage_friends_msg_copy_my_code">나의 친구 코드가 복사되었습니다.</string>
    <string name="mypage_my_self_quiz">내가 낸 퀴즈 확인</string>
    <string name="mypage_my_self_quiz_title">내가 낸 퀴즈</string>
    <string name="mypage_my_self_quiz_no_quiz_list">아직 내가 만든 퀴즈가 없어요!</string>
    <string name="mypage_my_self_quiz_msg_fail_load_quiz_title_list">내가 만든 퀴즈 목록 불러오기에 실패했습니다.</string>
    <string name="mypage_my_solved_quiz_no_quiz_list">아직 내가 푼 퀴즈가 없어요!</string>
    <string name="mypage_my_solved_quiz_msg_fail_load_quiz_title_list">내가 푼 퀴즈 목록 불러오기에 실패했습니다.</string>
    <string name="mypage_my_solved_quiz_no_wrong_quiz_list">틀린 문제가 없어요!</string>
    <string name="mypage_my_solved_quiz_msg_fail_load_wrong_quiz">틀린 퀴즈 목록 불러오기에 실패했습니다.</string>
    <string name="setting_title">설정</string>
    <string name="setting_quiz">퀴즈 설정</string>
    <string name="setting_hold_quiz">잠금화면 문제</string>
    <string name="setting_term">이용 약관</string>
    <string name="setting_privacy">개인정보처리방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_msg_logout">로그아웃 하시겠습니까?</string>
    <string name="setting_msg_fail_logout">회원 정보 초기화에 실패했습니다.</string>
    <string name="setting_msg_fail_withdrawal">회원 탈퇴에 실패했습니다.</string>
    <string name="setting_msg_fail_limit">기기 회원 정보 초기화에 실패했습니다.</string>
    <string name="setting_msg_logout_yes">로그아웃</string>
    <string name="setting_msg_logout_no">취소</string>
    <string name="setting_withdrawal">회원탈퇴</string>
    <string name="setting_msg_withdrawal">정말로 탈퇴하시겠습니까?</string>
    <string name="setting_msg_withdrawal_yes">떠날래요</string>
    <string name="setting_msg_withdrawal_no">더 써볼래요</string>
    <string name="setting_msg_file_error">문서를 읽어오는 데에 실패했어요.</string>
    <string name="home_today_word">오늘의 단어를 알아보아요!</string>
    <string name="home_fail_flower">정원 정보 불러오기에 실패했어요.</string>
    <string name="home_fail_word">오늘의 단어 불러오기에 실패했어요.</string>
    <string name="alarm_title">알람</string>
    <string name="alarm_check_quiz">님이 보낸 퀴즈를 확인하세요!</string>
    <string name="alarm_msg_fail_load_alarm">알람 데이터 불러오기에 실패했어요.</string>
    <string name="alarm_msg_fail_delete_alarm">알람 데이터 삭제에 실패했어요.</string>
    <string name="alarm_msg_fail_get_quiz">퀴즈 불러오기에 실패했어요.</string>
    <string name="alarm_no_alarm_list">아직 받은 알람이 없어요!</string>
    <string name="quiz_title">퀴즈 게임</string>
    <string name="quiz_welcome">오늘의 퀴즈가\n준비되어 있어요!</string>
    <string name="quiz_support_btn">친구가 만든 퀴즈를 맞혀보세요!</string>
    <string name="quiz_all_clear">축하합니다!\n모든 퀴즈를 다 풀었어요!</string>
    <string name="quiz_alone">퀴즈 풀기</string>
    <string name="quiz_custom"><u>퀴즈 만들러 가기</u></string>
    <string name="quiz_msg_fail_get_uid">회원 번호 받아오기에 실패했어요.</string>
    <string name="quiz_msg_fail_get_user_info">회원 정보 받아오기에 실패했어요.</string>
    <string name="quiz_msg_fail_get_daily_limit">일일 퀴즈 횟수 받아오기에 실패했어요.</string>
    <string name="solve_quiz_msg_use_count">일일 퀴즈 횟수가 차감됩니다.\n퀴즈를 제출할까요?</string>
    <string name="make_quiz_share">친구에게 공유하기</string>
    <string name="make_quiz_title">퀴즈 만들기</string>
    <string name="make_quiz_input_name">퀴즈 이름을 작성해 주세요.</string>
    <string name="make_quiz_question_title">문제</string>
    <string name="make_quiz_answer">답</string>
    <string name="make_quiz_next">다음</string>
    <string name="make_quiz_msg_fail_make_quiz">퀴즈 만들기를 실패했어요.</string>
    <string name="make_quiz_msg_need_question_answer">문제와 정답을 모두 입력해주세요.</string>
    <string name="make_quiz_msg_need_title">퀴즈 이름을 입력해주세요.</string>
    <string name="make_quiz_msg_need_all_check">모든 문제와 정답을 입력하였는지 확인해주세요.</string>
    <string name="make_quiz_msg_unknown_error">알 수 없는 이유로 퀴즈 만들기에 실패했어요.</string>
    <string name="make_quiz_msg_can_not_edit">내가 만든 커스텀 퀴즈는 확인만 가능해요!\n(수정 불가)</string>
    <string name="make_quiz_msg_fail_load_quiz_list">내가 만든 퀴즈 불러오기에 실패했습니다.</string>
    <string name="share_quiz_title">퀴즈 공유하기</string>
    <string name="share_quiz_description">친구랑 같이 퀴즈를 풀어보세요!</string>
    <string name="share_quiz_no_friends">아직 친구가 없어요!</string>
    <string name="share_quiz_msg_fail_load_friends">친구 목록 불러오기에 실패했습니다.</string>
    <string name="share_quiz_msg_share">친구에게 퀴즈를 공유할게요!</string>
    <string name="share_quiz_msg_fail_to_share">퀴즈 공유에 실패했어요.</string>
    <string name="share_quiz_msg_success_sharing">친구에게 퀴즈를 공유했어요!</string>
    <string name="garden_user_name">님의 정원</string>
    <string name="garden_buy_watering_cans">물뿌리개 구매에 실패했습니다.</string>
    <string name="garden_use_watering_cans">물뿌리개 사용에 실패했습니다.</string>
    <string name="shop_title">물뿌리개 상점</string>
    <string name="shop_use_water_pot">물뿌리개를 사용해보세요!</string>
    <string name="shop_lake_of_momey">재화가 부족합니다!</string>
    <string name="shop_resource">재화를 불러오는데 실패했어요.</string>
    <string name="book_unknown">\???</string>
    <string name="book_user_book">나의 도감</string>
    <string name="apple">사과 나무</string>
    <string name="cherry_blossom">벚꽃</string>
    <string name="tulip">튤립</string>
    <string name="sun_flower">해바라기</string>
    <string name="money_tree">돈나무</string>
    <string name="luminescence_seed">야광씨앗</string>
    <string name="cactus">선인장</string>
    <string name="bamboo">대나무</string>
    <string name="star_tree">별나무</string>
    <string name="mushroom">버섯</string>
    <string name="cloud_tree">둥실둥실나무 </string>
    <string name="watermelon_tree">수박나무</string>
    <string name="start_quiz_title">퀴즈 게임</string>
    <string name="start_quiz_made_by">님이 만든 퀴즈</string>
    <string name="start_quiz_start">퀴즈 시작하기</string>
    <string name="start_quiz_app_quiz">어휘의 정원에서 만든\n어휘력 향상 퀴즈 준비 완료!</string>
    <string name="start_quiz_msg_fail_get_quiz">퀴즈 받아오기에 실패했어요.</string>
    <string name="start_quiz_msg_fail_get_quiz_info">퀴즈 정보 받아오기에 실패했어요.</string>
    <string name="start_quiz_msg_fail_save_daily_limit">일일 퀴즈 횟수 저장에 실패했어요.</string>
    <string name="solve_quiz_next">다음</string>
    <string name="solve_quiz_submit">제출하기</string>
    <string name="solve_quiz_fill_answer">빈칸에 정답을 입력해 주세요.</string>
    <string name="solve_quiz_msg_need_select_answer">정답을 선택해주세요.</string>
    <string name="solve_quiz_msg_need_answer">정답을 입력해주세요.</string>
    <string name="solve_quiz_msg_need_all_check">모든 문제의 정답을 입력하였는지 확인해주세요.</string>
    <string name="solve_quiz_msg_fail_submit">문제 제출에 실패했어요.</string>
    <string name="result_quiz_correct_check">정답 확인</string>
    <string name="result_quiz_correct">정답: </string>
    <string name="result_quiz_answer">제출한 답: </string>
    <string name="result_quiz_title_total">총 10문제 중</string>
    <string name="result_quiz_title_correct">문제를 맞혔어요!</string>
    <string name="result_quiz_title_all_incorrect">모두 틀렸어요..</string>
    <string name="result_quiz_title_all_correct">모두 맞혔어요!</string>
    <string name="result_quiz_share">친구에게 이 퀴즈를 공유할래요!</string>
    <string name="result_quiz_msg_fail_get_result">결과 불러오기에 실패했어요.</string>
    <string name="common_positive">네</string>
    <string name="common_negative">아니오</string>
    <string name="common_got_it">이해했어요.</string>
    <string name="word_title">단어 학습</string>
    <string name="category_science">과학</string>
    <string name="category_basic">기본어휘</string>
    <string name="category_idiom">사자성어</string>
    <string name="category_society">사회</string>
    <string name="word_learning">단어 학습 시작하기</string>
    <string name="detail_save">저장하기</string>
    <string name="detail_back">돌아가기</string>
    <string name="detail_next">넘어가기</string>
    <string name="word_unload">단어를 불러오는데 실패했어요.</string>
    <string name="word_like">좋아요 정보를 불러오지 못했습니다.</string>
    <string name="word_like_save">좋아요 저장에 실패했습니다.</string>
    <string name="default_notification_channel_id">channel_id_wordgarden</string>
    <string name="push_share_quiz_title">친구에게 퀴즈를 공유 받았어요!</string>
    <string name="loading_loading">불러오는 중...</string>
    <string name="naver_client_id">fYtp0C5dQV4enao8hy1Q</string>
    <string name="naver_client_secret">EFmMabs3BG</string>
    <string name="kakao_native_key">9132f18301634afbec5f2618e16f5f09</string>
    <string name="kakao_native_key_kakao">kakao9132f18301634afbec5f2618e16f5f09</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>