<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_khaki">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_quiz_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_quiz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title"
            android:textColor="@color/green"
            android:textSize="@dimen/text_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_quiz_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow_white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_quiz_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_quiz_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_quiz_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_round_background"
        android:padding="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/cl_quiz_top_bar">

        <ScrollView
            android:id="@+id/sv_word"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/word_radio_grooup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_basic"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_radio_button"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/category_basic"
                        android:textSize="@dimen/text_smaller"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/margin_small"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_society"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_radio_button"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/category_society"
                        android:textSize="@dimen/text_smaller"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/margin_small"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_science"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_radio_button"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/category_science"
                        android:textSize="@dimen/text_smaller"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/margin_small"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_idiom"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_radio_button"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/category_idiom"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_smaller"/>
                </RadioGroup>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_word"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/word_radio_grooup" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/word_learning"
            android:layout_marginTop="40dp"
            android:textColor="@color/green"
            android:textSize="@dimen/text_smaller"
            app:layout_constraintTop_toBottomOf="@+id/sv_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>